# graphics101-raycasting

./: .gitignore  CMakeLists-zip.txt  CMakeLists.txt  README.md  camera.cpp  camera.h  debugging.h  image.cpp  image.h  main.cpp  mesh.cpp  parser.cpp  raycasting.pro  scene.cpp  scene.h  shape.cpp  shape.h  types.h
docs/: Ray Shape Intersection Formula.txt  raycasting_cylinder.py
docs/readme_images/: tex
examples/: README.txt  camera_test1.json  camera_test2.json  cone_cube.json  defaults.json  mesh.json  orthographic_test1.json  orthographic_test2.json  refraction.json  refraction_inside.json  spheres_cylinder.json  stress_test.json
src/: camera.cpp  camera.h  image.cpp  image.h  light.h  main.cpp  material.h  scene.cpp  scene.h  shape.cpp  shape.h  types.h
test/: CMakeLists.txt  camera_test.cpp  scene_test.cpp
